refactor: replace reflection-based AdapterFactory with Supplier<T> map
Replace reflection-based adapter creation in AdapterFactory with
pre-registered Supplier<T> constructors. Also replace Croquet's
custom Lazy<T> pattern with java.util.function.Supplier<T> in
launch/frame factories.

AdapterFactory changes:
- Replace ReflectionUtilities.getClassForName/newInstance with
  explicit Supplier registrations for all 50+ concrete adapters
- Retain hierarchy walking for subclass resolution
- Cache resolved suppliers for performance

Croquet launch factory changes:
- LazyLaunchOperationFactory: Lazy<C> → Supplier<C>
- LazySimpleLaunchOperationFactory: reflection → Supplier with
  thread-safe memoization
- LazyIsFrameShowingState: same pattern
- Update all callers in core/ide to use lambda suppliers

Verified: mvn compile -pl core/glrender,core/croquet,core/ide -am passes.

Closes #822

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>